# A-Novel-on-Underwater-Robot-Coordinate-Tracking-Algorithm-based-on-USBL

./: README.md
Prev_ProjectFiles/: 아이로 프로토타입.sln
Prev_ProjectFiles/Assets/: Main Menu.prefab  fishData.json
Prev_ProjectFiles/Assets/01.Scene/: Monitoring.unity  New Scene.unity  Tracking Material.mat
Prev_ProjectFiles/Assets/03.Script/: GameManager.cs
Prev_ProjectFiles/Assets/Materials/: Floor.mat  origin.mat
Prev_ProjectFiles/Assets/Prefabs/: Btn.prefab  CircularTank.prefab  GameObject 1.prefab  GameObject.prefab  LineY.prefab  LineZ.prefab  Point Object.prefab  RectanlularTank.prefab  SCharacter_Fish.prefab  X Axis.prefab  fish.prefab
Prev_ProjectFiles/Assets/Scripts/: CameraController.cs  CheckInController.cs  Data.cs  Scene.cs  (+11 more)
Prev_ProjectFiles/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Prev_ProjectFiles/UnderWater vehicle Tracking Data/: Test_10m, Depth17.xlsx  Test_16m, Depth16m.xlsx  Test_50m_Depth10.xlsx  Tracking Data_3.csv
ProjectFiles/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj
ProjectFiles/Assets/: New Render Texture.renderTexture  VertexMatirial.mat
ProjectFiles/Logs/: ApiUpdaterCheck.txt
ProjectFiles/USBL_Unity_Cpp_Plugin/: CMakeLists.txt  README.md
ProjectFiles/USBL_Unity_Cpp_Plugin/src/: line_framer.h  serial_port.h
ProjectFiles/UnderWater vehicle Tracking Data/: Test_24m, Depth16.xlsx  Tracking Data_2.csv
ProjectFiles/UserSettings/: EditorUserSettings.asset
ProjectFiles/src/: seatrac.hpp.cpp
UnderWater vehicle Tracking Data/: Tracking Data_2.csv  Tracking Data_3.csv
(+67 files in other folders)
